# rust-fundamentals

./: .gitignore  README.md
axum/: Cargo.toml
axum/src/: error.rs  main.rs  model.rs
axum/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
axum/tests/: quick_dev.rs
part00/: .gitignore  Cargo.toml
part00/src/: main.rs
part01/src/: main.rs
part02/: Cargo.toml
part02/src/: main.rs
part03/: Cargo.toml
part03/src/: main.rs
part04/: Cargo.toml
part04/src/: main.rs
part05/: Cargo.toml
part05/src/: main.rs
part06/: Cargo.toml
part06/src/: main.rs  part02.rs  part05.rs
rust-101/src/: main.rs  part02.rs  part03.rs  part05.rs  part06.rs
rust-tcp/: rust.tcp  tcp  tcp.rs
