[package]
name = "axum"
version = "0.1.0"
edition = "2021"

[dependencies]
# serde / json
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"]}
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1.1"